fixed some sizing issues with bottom qs panel and fixed some issues with text wrapping

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -73,6 +73,8 @@ html {
     overflow-wrap: break-word;
     overscroll-behavior: none;
 
+    white-space: nowrap;
+
     font-family: var(--font);
     /* font-weight: lighter; */
     letter-spacing:1px;
